[gd_scene load_steps=2 format=3 uid="uid://vxkr83lai6yx"]

[ext_resource type="Script" uid="uid://cfwboc8usqary" path="res://Scripts/Rooms/Center.gd" id="1_rvmcp"]

[node name="Center" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_rvmcp")

[node name="DownButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.37
anchor_top = 0.691
anchor_right = 0.618
anchor_bottom = 0.846
offset_left = -0.23999
offset_top = 0.231964
offset_right = 14.064
offset_bottom = -0.208008
text = "Down
"

[node name="UpButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.37
anchor_top = 0.154
anchor_right = 0.63
anchor_bottom = 0.309
offset_left = -0.23999
offset_top = 0.207993
offset_right = 0.239929
offset_bottom = -0.231979
text = "Up
"

[node name="RightButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.653
anchor_top = 0.423
anchor_right = 0.913
anchor_bottom = 0.577
offset_left = -0.256042
offset_top = -0.104004
offset_right = 0.223999
offset_bottom = 0.104004
text = "Right
"

[node name="LeftButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.087
anchor_top = 0.423
anchor_right = 0.347
anchor_bottom = 0.577
offset_left = -0.224007
offset_top = -0.104004
offset_right = 0.25592
offset_bottom = 0.104004
text = "Left"

[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
